Weather API work-in-progess

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,10 @@
         <title>Fishing Journal</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="/stylesheets/main.css">
+        
+        <link rel="stylesheet" href="//code.jquery.com/ui/1/12/1/themes/smoothness/jquery-ui.css">
+        <script src="//code.jquery.com/jquery-1.12.4.js"></script>
+        <script src="//code.jquery.com/ui/1/12/1/jquery-ui.js"></script>
     </head>
     <body>
         
