--- a/views/rivers/show.ejs
+++ b/views/rivers/show.ejs
@@ -1,19 +1,34 @@
 <% include ../partials/header %>
 
+<!-- style for displaying/hiding section info panels -->
+<!-- eventually move into main.css, but here now just for ease of testing -->
+<style>
+    .hidden{    
+    display: none;
+    }
+</style>
+
 <div class="container">
     <div class="row">
         <div class="col-md-3">
             <p class="lead">RiverJournal</p>
             <div class="list-group">
-                <li class="list-group-item active">River Sections:</li>
-                
-                <% river.sections.forEach(function(section){ %>
-                    <li class="list-group-item"><%= section.name %></li>
-
-                <% }); %>
-            </div>
-
+                <ul id="river-sections">
+                    <li class="list-group-item active">River Sections:</li>
+                    
+                    <!-- Print out an LI for each river section -->
+                    <!-- user can then click to toggle a display planel for that section -->
+                    
+                    <% river.sections.forEach(function(section){ %>
+                        <li class="list-group-item" id="<%=section.name%>">
+                            <%= section.name %>
+                        </li>
+                    <% }); %>
+                    
+                </ul>
+            </div> <!-- list-group -->
         </div>
+        
         <div class="col-md-9">
             <div class="thumbnail">
                 <div class="caption-full">
@@ -23,18 +38,36 @@
 
                 </div>
             </div>
+            
+        <!-- Section info panel -->
+        <!-- Important: all toggle-panels have to have an ID prefix of 'section-' -->
+            <div class="thumbnail">
+                
+                <!-- default section, hides once an actual section is selected -->
+                <div id="section-default">Select a River Section to view more info</div>
+                
+                <!-- Cycle through each river section and print out a div -->
+                <% river.sections.forEach(function(section){ %>
+                    <div class="river-section hidden" id="section-<%= section.name %>">
+                        <h2><%= section.name %></h2>
+                    </div>            
+                <% }); %>
+            
+            </div>
 
+            <div class="thumbnail"  id="weather">
+                <!--<p><span id="temp"></span></p>-->
+                <!--<p><span id="wind"></span></p>-->
+                <p><b>Current Temperature:</b> <%= weather %></p>
+            </div>
+            
+           
             <div class="thumbnail" id="map">
                 Map Div
             </div>
             
-            <div class="thumbnail"  id="weather">
-                Weather Forecast
-            </div>
             
-            <div class="thumbnail"  id="section">
-                Section
-            </div>
+            
 
             <div class="well">
                 <a class="btn btn-warning" href="/rivers/<%= river._id %>/edit">Edit</a>
@@ -49,7 +82,20 @@
     </div>
 </div>
 
+<script>
+//JQUERY functionality that allows user to select & view info for a given section
+//Current problem: only works if section's 'name' property contains no spaces
+    $("#river-sections li").on("click", function(e){
 
+        $this = $(this);
+        $id = $this.attr('id');
+        $class = '.' + $('#section-' + $id).attr('class').replace('hide', '');
 
+        $('div[id^=section]').not($class).addClass('hidden');
+        $('#section-' + $id).removeClass('hidden');
+    });
+</script>
+
+<!--<script src="/js/darksky.js"></script>-->
 
 <% include ../partials/footer %>
