--- a/views/rivers/show.ejs
+++ b/views/rivers/show.ejs
@@ -39,45 +39,63 @@
                 </div>
             </div>
             
-        <!-- Section info panel -->
-        <!-- Important: all toggle-panels have to have an ID prefix of 'section-' -->
-            <div class="thumbnail">
-                
-                <!-- default section, hides once an actual section is selected -->
-                <div id="section-default">Select a River Section to view more info</div>
-                
-                <!-- Cycle through each river section and print out a div -->
-                <% river.sections.forEach(function(section){ %>
-                    <div class="river-section hidden" id="section-<%= section.name %>">
-                        <h2><%= section.name %></h2>
-                    </div>            
-                <% }); %>
-            
-            </div>
-
-            <div class="thumbnail"  id="weather">
-                <!--<p><span id="temp"></span></p>-->
-                <!--<p><span id="wind"></span></p>-->
-                <p><b>Current Temperature:</b><%= weather.currentTemp %></p>
-                <p><b><%= weather.currentSummary %></b></p>
-                <div>
-                    <ul><h4>Today's Weather</h4>
-                        <li>Current Temperature: <%= weather.currentTemp %></li>
-                        <li>Current Conditions: <%= weather.currentSummary %></li>
-                        <!--<li>Sunrise Time</li>-->
-                        <!--<li>Sunset Time</li>-->
-                        <!--<li>High Temp</li>-->
-                        <!--<li>Low Temp</li>-->
-                        <!--<li>Weather alerts</li>-->
-                    </ul>
+<!-- Trout Stocking -->
+            <div class="thumbnail"  id="stocking">
+                <div class="container-fluid">
+                    <div class="row">
+                        <% include ../partials/stocking %> 
+                    </div>
                 </div>
             </div>
+
+
+
+<!-- END trout stocking -->
+
+
+<!-- Weather -->
+            <div class="thumbnail"  id="weather">
+                <div class="container-fluid">
+                    <div class="row">
+                        <% include ../partials/weather %>    
+                    </div>
+                </div>
+            </div>
+<!-- end Weather -->
+
             
-           
+            <div class="thumbnail" id="usgs">
+                <p>USGS Data Location: <%= usgsData.value.timeSeries[0].sourceInfo.siteName %> | River ID: <%= river.usgsID %></p>
+                <p>Current Flow: <%= usgsData.value.timeSeries[0].values[0].value[0].value %></p>
+                <img src="http://waterdata.usgs.gov/nwisweb/graph?site_no=<%=river.usgsID%>&parm_cd=00060"  width="576" height="400" alt="USGS Water-data graph for site 06025500"  /> 
+            </div>
+                
+            
+<!--
             <div class="thumbnail" id="map">
                 Map Div
             </div>
+-->
+
+            <div class="thumbnail">
+
+        <!-- Section info panel -->
+        <!-- Important: all toggle-panels have to have an ID prefix of 'section-' -->
+                
+                <!-- default section, hides once an actual section is selected -->
+<!--                <div id="section-default">Select a River Section to view more info</div>    -->
+                
+                <!-- Cycle through each river section and print out a div -->
+                <% //river.sections.forEach(function(section){ %>     
+<!--                    <div class="river-section hidden" id="section-<%= //section.name %>"> -->
+<!--                    <h2><%= //section.name %></h2>    -->
+<!--                    </div>    -->          
+<!--                <% //}); %>   -->
             
+            </div>
+
+
+
             <div class="well">
                 <% river.comments.forEach(function(comment){ %>
                     <p><strong><%= comment.author %></strong> - <%=comment.text %></p>
@@ -99,7 +117,7 @@
             </div>
         </div>
     </div>
-</div>
+
 
 <script>
 //JQUERY functionality that allows user to select & view info for a given section
