--- a/views/partials/stocking.ejs
+++ b/views/partials/stocking.ejs
@@ -1,15 +1,15 @@
-<% var stockedRiver = river.name %>
-
+<% var stockedRiver = river.name; %>
 
 <!-- Google Charts API -->
-        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
     <script type="text/javascript">
-    // console.log(stockedRiver);
+		var theRiver = "<%=stockedRiver%>";
+		console.log(theRiver);
      google.charts.load('current', {'packages':['controls', 'table']});
      google.charts.setOnLoadCallback(drawTable);
 	  
 	function drawTable() {
-		var queryString = encodeURIComponent(`SELECT A, B, C, E, G WHERE B="Swift River"`);
+		var queryString = encodeURIComponent(`SELECT A, B, C, E, G WHERE B="${theRiver}"`);
 		var fishquery = new google.visualization.Query('https://docs.google.com/spreadsheets/d/1yedDqFS59PIHnOYWYy8tNnLEbHBWVQ_GZxtGOuRkDzQ/gviz/tq?gid=0&headers=1&tq=' + queryString);
 		
 		fishquery.send(handleQueryResponse);
@@ -89,8 +89,8 @@
     
     <p>Trout Stocking report for <%= river.name %></p>
 <div id="dashboard_div">
-		<div id="filter_div" class="filter"></div>
-		<div id="filterTown_div" class="filter"></div>
+		<div id="filter_div" class="filter" style="display:none"></div>
+		Filter by Town: <div id="filterTown_div" class="filter"></div>
 		<div id="trout_table"></div>
 	</div>
     
