--- a/views/rivers/index.ejs
+++ b/views/rivers/index.ejs
@@ -3,7 +3,7 @@
 <div class="container">
 
     <header class="jumbotron">
-        <h1>River Journal</h1>
+        <h1>River Dahsboard</h1>
         <p>Intro Text</p>
         <p>
     
