--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,54 +9,19 @@
         <script src="//code.jquery.com/jquery-1.12.4.js"></script>
         <script src="//code.jquery.com/ui/1/12/1/jquery-ui.js"></script>
         <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.48.0/mapbox-gl.js'></script>
+<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.48.0/mapbox-gl.css' rel='stylesheet' />
         
-        <script type="text/javascript">
-        var lastId,
-            topMenu = $("#river-menu"),
-            topMenuHeight = topMenu.outerHeight()+1,
-            menuItems = topMenu.find("a"),
-            scrollItems = menuItems.map(function(){
-                var item = $($(this).attr("href"));
-                if (item.length) { return item; }
-            });
-
-// Bind click handler to menu items
-// so we can get a fancy scroll animation
-menuItems.click(function(e){
-  var href = $(this).attr("href"),
-      offsetTop = href === "#" ? 0 : $(href).offset().top-topMenuHeight+1;
-  $('html, body').stop().animate({ 
-      scrollTop: offsetTop
-  }, 850);
-  e.preventDefault();
-});
-
-// Bind to scroll
-$(window).scroll(function(){
-   // Get container scroll position
-   var fromTop = $(this).scrollTop()+topMenuHeight;
-   
-   // Get id of current scroll item
-   var cur = scrollItems.map(function(){
-     if ($(this).offset().top < fromTop)
-       return this;
-   });
-   // Get the id of the current element
-   cur = cur[cur.length-1];
-   var id = cur && cur.length ? cur[0].id : "";
-   
-   if (lastId !== id) {
-       lastId = id;
-       // Set/remove active class
-       menuItems
-         .parent().removeClass("active")
-         .end().filter("[href=#"+id+"]").parent().addClass("active");
-   }                   
-});
-</script>
-
+        <style>
+            /* needed for bootstrap scrollspy plugin */
+            body{
+                position: relative;
+            }
+        </style>
     </head>
-    <body>
+    <body data-spy="scroll" data-target="#river-menu">
         
 <% include ./svgs %>
 
@@ -70,4 +35,11 @@ $(window).scroll(function(){
         </div>    
         
     </nav>
+    
+    <!--<div id="navbar-example" style="position: sticky; top:5%;">-->
+    <!--    <ul class="nav nav-tabs" role="tablist">-->
+    <!--        <li class="list-group-item active"><a href="#top">Top of Page</a></li>-->
+    <!--        <li class="list-group-item"><a href="#bottom">Bottom of Page</a></li>-->
+    <!--    </ul>-->
+    <!--</div>-->
         
