--- a/views/partials/stocking.ejs
+++ b/views/partials/stocking.ejs
@@ -1,87 +1,12 @@
 <% var stockedRiver = river.name; %>
 
 <!-- Google Charts API -->
-
-    <script type="text/javascript">
+	<script type="text/javascript">
+		//Passes River name variable from server side to client side
+		//Gets used in gcharts.js
 		var theRiver = "<%=stockedRiver%>";
-		console.log(theRiver);
-     google.charts.load('current', {'packages':['controls', 'table']});
-     google.charts.setOnLoadCallback(drawTable);
-	  
-	function drawTable() {
-		var queryString = encodeURIComponent(`SELECT A, B, C, E, G WHERE B="${theRiver}"`);
-		var fishquery = new google.visualization.Query('https://docs.google.com/spreadsheets/d/1yedDqFS59PIHnOYWYy8tNnLEbHBWVQ_GZxtGOuRkDzQ/gviz/tq?gid=0&headers=1&tq=' + queryString);
-		
-		fishquery.send(handleQueryResponse);
-	} 
- 
-    function handleQueryResponse(response) {
-        if (response.isError()) {
-            alert('Error in query: ' + response.getMessage());response.getDetailedMessage();
-            return;
-        }
-
-		var data = response.getDataTable();
-		
-		// Modify table data so it is correctly sorted by pond name AND clickable
-        	var numRows = data.getNumberOfRows();
-        	for (var i=0; i<numRows; i++) {
-            		var textDate = data.getFormattedValue(i, 4);
-            		var rawDate=data.getValue(i, 0);
-            		data.setValue(i, 0, rawDate); // cell value is what is sorted on, this should be formatted as date
-            		data.setFormattedValue(i, 0, textDate); // this is what our visualization will display whihc includes text when waterbody is unstocked
-        	}
-		
-		var dashboard = new google.visualization.Dashboard(document.getElementById('dashboard_div'));
-		
-		var myTable = new google.visualization.ChartWrapper({
-			chartType: 'Table',
-			containerId: 'trout_table',
-			dataTable: data,
-			options: {
-				width: '100%',
-				page: 'enable',
-				pageSize: 10
-			},
-			view: {'columns': [0,1,2,3]} // Hide the raw name column from view
-		});
-// 		console.log(myTable);
-		
-		var filterWater= new google.visualization.ControlWrapper({
-			controlType: 'StringFilter',
-			containerId: 'filter_div',
-// 			state: {
-// 			    value: 'Swift'
-// 			},
-			options: {
-             filterColumnIndex: 1,
-            //  value: 'Swift',
-			 matchType: 'any'
-        }
-		});
-		
-		var filterTown = new google.visualization.ControlWrapper({
-			controlType: 'StringFilter',
-			containerId: 'filterTown_div',
-			options: {
-             filterColumnIndex: 2
-        }
-		});
-		
-		var filterDistrict = new google.visualization.ControlWrapper({
-			controlType: 'StringFilter',
-			containerId: 'filterDist_div',
-			options: {
-             filterColumnIndex: 4
-        }
-		});
-		
-		dashboard.bind([filterTown], [filterWater]);
-		dashboard.bind([filterWater], [myTable]);
-		dashboard.draw(data);
-		}
-	
-    </script>
+	</script>
+    <script type="text/javascript" src="../js/gcharts.js"></script>
 <!-- END google charts API -->
 
 <div class="col">
@@ -94,7 +19,5 @@
 		<div id="trout_table"></div>
 	</div>
     
-
-
 </div> <!-- col-md-7 -->
                         
